eks_llm_sample/app/tgw-engine/config/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: tgw-engine
  namespace: tgw
spec:
  host: tgw-engine.tgw.svc.cluster.local
  subsets:
  - name: llama2-7b-chat-awq
    labels:
      version: llama2-7b-chat-awq
  - name: llama2-13b-chat-awq
    labels:
      version: llama2-13b-chat-awq
  - name: rose-20b-gptq
    labels:
      version: rose-20b-gptq
