eks_llm_sample/app/tgw-engine/config/kong-route-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-route-tgw-engine
  namespace: tgw
  annotations:
    konghq.com/strip-path: 'true'
spec:
  ingressClassName: kong
  rules:
  - host: tgw-engine-kong.yugaozh-flow.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: tgw-engine
            port:
              number: 5000
