eks_llm_sample/app/tgw-engine/config/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tgw-engine
  namespace: tgw
spec:
  hosts:
  - tgw-engine.yugaozh-flow.com
  gateways:
  - gateway-tgw-engine
  http:
  - route:
    - destination:
        host: tgw-engine
        port:
          number: 5000
        subset: llama2-7b-chat-awq
      weight: 0
    - destination:
        host: tgw-engine
        port:
          number: 5000
        subset: llama2-13b-chat-awq
      weight: 0
    - destination:
        host: tgw-engine
        port:
          number: 5000
        subset: rose-20b-gptq
      weight: 100
